--- a/Galería.html
+++ b/Galería.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Unión Y Esfuerzo</title>
-	<link rel="Shortcut icon" type="image/x-icon" href="fotos/UNIÓN.ICO"/>    
+	<link rel="Shortcut icon" type="image/x-icon" href="UNIÓN.ICO"/>    
 	<link rel="stylesheet" type="text/css" href="EstiloCss.css"/>
 	<script src="main.js"></script>
 </head>
@@ -12,7 +12,7 @@
      <section class="espacio"> </section>
 	 
      <section class="barra">
-	 <i><strong><center><img src="fotos/UNIÓN.ICO" width="50" height="50"/> &nbsp <font color="black">Instituto Unión Y Esfuerzo</font> &nbsp 	 
+	 <i><strong><center><img src="UNIÓN.ICO" width="50" height="50"/> &nbsp <font color="black">Instituto Unión Y Esfuerzo</font> &nbsp 	 
 	 </section>
      <header>
 	 <nav>
@@ -33,7 +33,7 @@
 	 
 	 <aside class="leftcompleto">
 	 <aside class="left">
-	  <img src="fotos/UNIÓN Y ESFUERZO.PNG" width="200" height="350"/>
+	  <img src="UNIÓN1.PNG" width="200" height="350"/>
 	 
 	 </aside>
 	 
@@ -41,25 +41,25 @@
 	 
 	 <article>
 	 <article class="instituto">
-	     <img src="fotos/1.png" width="110" height="110"/>  &nbsp
-		 <img src="fotos/2.png" width="110" height="110"/>  &nbsp
-		 <img src="fotos/3.png" width="110" height="110"/>  &nbsp
-		 <img src="fotos/4.png" width="110" height="110"/>  &nbsp
-		 <img src="fotos/5.png" width="110" height="110"/>  &nbsp
-		 <img src="fotos/6.png" width="110" height="110"/>  &nbsp
-		 <img src="fotos/7.png" width="110" height="110"/>  &nbsp
-	     <img src="fotos/9.png" width="110" height="110"/>  &nbsp
-		 <img src="fotos/10.png" width="110" height="110"/> &nbsp
-		 <img src="fotos/11.png" width="110" height="110"/> &nbsp
-		 <img src="fotos/amiguis.jpg" width="110" height="110"/> &nbsp
-	<img src="fotos/parq.jpg" width="110" height="110"/> &nbsp
+	     <img src="1.png" width="110" height="110"/>  &nbsp
+		 <img src="2.png" width="110" height="110"/>  &nbsp
+		 <img src="3.png" width="110" height="110"/>  &nbsp
+		 <img src="4.png" width="110" height="110"/>  &nbsp
+		 <img src="5.png" width="110" height="110"/>  &nbsp
+		 <img src="6.png" width="110" height="110"/>  &nbsp
+		 <img src="7.png" width="110" height="110"/>  &nbsp
+	     <img src="9.png" width="110" height="110"/>  &nbsp
+		 <img src="10.png" width="110" height="110"/> &nbsp
+		 <img src="11.png" width="110" height="110"/> &nbsp
+		 <img src="amiguis.jpg" width="110" height="110"/> &nbsp
+	     <img src="parq.jpg" width="110" height="110"/> &nbsp
 	 </article>	
 	 
 	 </article>
 	 
 	 <aside class="rightcompleto">
 	 <aside class="right">
-	     <img src="fotos/UNIÓN Y ESFUERZO.PNG" width="200" height="350"/> 
+	     <img src="UNIÓN1.PNG" width="200" height="350"/> 
 		  
 	 </aside>
 	 </aside>
