--- a/Misión.html
+++ b/Misión.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Unión Y Esfuerzo</title>
-	<link rel="Shortcut icon" type="image/x-icon" href="fotos/UNIÓN.ico"/>    
+	<link rel="Shortcut icon" type="image/x-icon" href="UNIÓN.ico"/>    
 	<link rel="stylesheet" type="text/css" href="EstiloCss.css"/>
 	<script src="main.js"></script>
 </head>
@@ -12,7 +12,7 @@
      <section class="espacio"> </section>
 	 
      <section class="barra">
-	 <i><strong><center><img src="fotos/UNIÓN.ico" width="50" height="50"/> &nbsp <font color="black">Instituto Unión Y Esfuerzo</font> &nbsp 	 
+	 <i><strong><center><img src="UNIÓN.ico" width="50" height="50"/> &nbsp <font color="black">Instituto Unión Y Esfuerzo</font> &nbsp 	 
 	 </section>
      <header>
 	 <nav>
@@ -32,7 +32,7 @@
 	 
 	 <aside class="leftcompleto">
 	 <aside class="left">
-	   <img src="fotos/UNIÓN Y ESFUERZO.PNG" width="200" height="350"/>
+	   <img src="UNIÓN1.PNG" width="200" height="350"/>
 	 
 	 </aside>
 	 
@@ -51,7 +51,7 @@
 	 
 	 <aside class="rightcompleto">
 	 <aside class="right">
-	     <img src="fotos/UNIÓN Y ESFUERZO.PNG" width="200" height="350"/>
+	     <img src="UNIÓN1.PNG" width="200" height="350"/>
 		 
 	 </aside>
 	 </aside>
