--- a/Principal.html
+++ b/Principal.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Unión Y Esfuerzo</title>
-	<link rel="Shortcut icon" type="image/x-icon" href="fotos/UNIÓN.ico"/>    
+	<link rel="Shortcut icon" type="image/x-icon" href="UNIÓN.ico"/>    
 	<link rel="stylesheet" type="text/css" href="EstiloCss.css"/>
 	<script src="main.js"></script>
 </head>
@@ -12,7 +12,7 @@
      <section class="espacio"> </section>
 	 
      <section class="barra">
-	 <i><strong><center><img src="fotos/UNIÓN.ico" width="50" height="50"/> &nbsp <font color="black">Instituto Unión Y Esfuerzo</font> &nbsp 
+	 <i><strong><center><img src="UNIÓN.ico" width="50" height="50"/> &nbsp <font color="black">Instituto Unión Y Esfuerzo</font> &nbsp 
 	 
 	 </section>
      <header>
@@ -33,7 +33,7 @@
 	 
 	 <aside class="leftcompleto">
 	 <aside class="left">
-	   <img src="fotos/UNIÓN Y ESFUERZO.PNG" width="200" height="350"/>
+	   <img src="UNIÓN1.PNG" width="200" height="350"/>
 	
 	 </aside>
 	 
@@ -41,7 +41,7 @@
 	 
 	 <article>
 	 <article class="instituto">
-	     <p><strong>El Instituto Oficial Unión  y  Esfuerzo</strong> fue creado en el año de 1978 como 
+	     <br/><p><strong>El Instituto Oficial Unión  y  Esfuerzo</strong> fue creado en el año de 1978 como 
 		 consecuencia de la organización de un grupo de personas interesadas en el desarrollo 
 		 de la comunidad. Al inicio fue una institución privada que funcionaba  en las instalaciones 
 		 de la Escuela Urbana del municipio, en la jornada nocturna, luego se convirtió en una institución 
@@ -56,7 +56,7 @@
 	 
 	 <aside class="rightcompleto">
 	 <aside class="right">
-	      <img src="fotos/UNIÓN Y ESFUERZO.PNG" width="200" height="350"/>
+	      <img src="UNIÓN1.PNG" width="200" height="350"/>
 		
 	 </aside>
 	 </aside>
